--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,7 +14,8 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.17.3 <3.0.0"
+  flutter: ">=3.0.2"
 
 dependencies:
   flare_splash_screen:
