--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,11 +4,14 @@ version: 4.0.0
 homepage: https://github.com/jaumard/flare_splash_screen
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
-  flutter: ">=1.7.8 <2.0.0"
+  sdk: '>=2.17.3 <3.0.0'
+  flutter: ">=3.0.2 <4.0.0"
 
 dependencies:
-  flare_loading: ^3.0.0
+
+  flare_loading:
+    git:
+      url: https://github.com/4itworks/flare_loading
   #path: '../flare_loading'
   flutter:
     sdk: flutter
