--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 4.0.0
 homepage: https://github.com/jaumard/flare_splash_screen
 
 environment:
-  sdk: '>=2.17.3 <3.0.0'
-  flutter: ">=3.0.2 <4.0.0"
+  sdk: ">=3.6.0 <4.0.0"
+  flutter: ">=3.27.1 <4.0.0"
 
 dependencies:
 
