--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,8 @@ version: 4.0.0
 homepage: https://github.com/jaumard/flare_splash_screen
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=3.5.0 <4.0.0"
+  flutter: ">=3.2.0 <4.0.0"
 
 dependencies:
 
